# coder-openapi

./: .gitignore  Cargo.toml  README.md  todo.md
.github/workflows/: ci.yml
benches/: benchmarks.rs
config/: app.yml  log4rs.yml  route.yml
locales/: en.yml  zh.yml
scripts/: performance_analysis.sh
src/: error.rs  lib.rs  locales.rs  main.rs  routes.rs
src/controller/: mod.rs
src/controller/chat/: chat.rs  chat_completion.rs  mod.rs
src/controller/models/: mod.rs  models.rs
src/entities/: chat_completion_message.rs  mod.rs
src/entities/models/: deepseek_coder.rs  mod.rs  model.rs  yi_coder.rs
src/middleware/: authentication.rs  error_handler.rs  logging.rs  mod.rs
src/route/: chat.rs  mod.rs  models.rs
src/routes/: route.rs
src/service/: mod.rs
src/service/chat/: chat_completion.rs  mod.rs
src/service/models/: chat_completion_message.rs  mod.rs
src/service/models/deepseek_coder/: config.rs  deepseek_coder.rs  infer.rs  inference.rs  loader.rs  mod.rs  transformer.rs
src/service/models/deepseek_coder/transformer/: attention.rs  config.rs  decoder.rs  encoder.rs  error.rs  mod.rs  (+2 more)
src/service/models/yi_coder/: config.rs  infer.rs  inference.rs  loader.rs  mod.rs  transformer.rs  yi_coder.rs
src/utils/: config.rs  download.rs  error.rs  init.rs  mod.rs  time.rs
tests/controller/chat/: chat_completions_test.rs
tests/controller/models/: models_test.rs
tests/middleware/: authentication_test.rs
tests/service/models/: mod.rs
tests/service/models/deepseek_coder/: infer_test.rs
tests/service/models/yi_coder/: infer_test.rs  mod.rs
(+14 files in other folders)
