[package]
name = "coder-openapi"
version = "0.1.0"
edition = "2021"
authors = ["bobzhang <admin@wcpsoft.cn>"]
description = "OpenAI-compatible API service for code models"
license = "Apache-2.0"
repository = "https://github.com/yourusername/coder-openapi"

[dependencies]
rust-i18n = "3"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.37", features = ["full"] }
futures = "0.3"
actix-web = "4.7"
anyhow = "1.0"
candle-core = "0.8"
hf-hub = { version = "0.3", features = ["tokio"] }
candle-nn = "0.8.1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
log4rs = "1.3.0"
reqwest = { version = "0.12", features = ["json"] }
safetensors = "0.4"
memmap2 = "0.9"
serde_json = "1.0"
thiserror = "2.0"
tokenizers = "0.21"
uuid = { version = "1.8", features = ["v4", "serde"] }
cargo-tarpaulin = { version = "0.31", optional = true }
async-trait = "0.1"
cargo-udeps = { version = "0.1", optional = true }
winnow = "0.6"
num_enum = "0.7"
rand = "0.8"


[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
actix-test = "0.1"
mockall = "0.13"
testcontainers = "0.23"
flamegraph = "0.6"
rustfmt = "0.10"
clippy = "0.0"


[features]
default = []
dev = ["cargo-tarpaulin"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
